<resources>
    <string name="app_name">TP_TDL_BELTRAN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="mapa_p1">Mapa del Piso 1</string>
    <string name="mapa_p2">Mapa del Piso 2</string>
    <string name="mapa_p3">Mapa del Piso 3</string>
    <string name="mapa_p4">Mapa del Piso 4</string>
    <string name="mapa_p5">Mapa del Piso 5</string>
    <string name="mapa_sub">Mapa del Subsuelo</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="selected_item">Seleccionado:</string>
    <string name="beltran_app">Beltran App</string>
    <string name="averigu_que_aulas_estan_libres">Averiguá que aulas estan libres!</string>
    <string name="mapa">MAPA</string>
    <string name="scroll_view_description">Lista de aulas disponibles</string>
    <string name="confirmar">Confirmar</string>
    <string name="est_s_seguro_de_reservar_el_aula">¿Estás seguro de reservar el aula?</string>
    <string name="bienvenido_a_la_reserva_de_aulas">Bienvenido a la reserva de aulas</string>
    <string name="selecciona_la_hora_d_a_y_piso_para_tu_reserva">Selecciona la hora y el dia para tu reserva</string>
    <string-array name="pisos_array">
        <item>Piso 1</item>
        <item>Subsuelo</item>
        <item>Piso 2</item>
        <item>Piso 3</item>
        <item>Piso 4</item>
        <item>Piso 5</item>
    </string-array>
</resources>



