<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tp_tdl_beltran.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/subsuelo_nav_gallery"
        android:name="com.example.tp_tdl_beltran.ui.gallery.SubsueloGalleryFragment"
        android:label="@string/mapa_sub"
        tools:layout="@layout/subsuelo_fragment_gallery" />

    <fragment
        android:id="@+id/piso1_nav_gallery"
        android:name="com.example.tp_tdl_beltran.ui.gallery.Piso1GalleryFragment"
        android:label="@string/mapa_p1"
        tools:layout="@layout/piso1_fragment_gallery" />

    <fragment
        android:id="@+id/piso2_nav_gallery"
        android:name="com.example.tp_tdl_beltran.ui.gallery.Piso2GalleryFragment"
        android:label="@string/mapa_p2"
        tools:layout="@layout/piso2_fragment_gallery" />

    <fragment
        android:id="@+id/piso3_nav_gallery"
        android:name="com.example.tp_tdl_beltran.ui.gallery.Piso3GalleryFragment"
        android:label="@string/mapa_p3"
        tools:layout="@layout/piso3_fragment_gallery" />

    <fragment
        android:id="@+id/piso4_nav_gallery"
        android:name="com.example.tp_tdl_beltran.ui.gallery.Piso4GalleryFragment"
        android:label="@string/mapa_p4"
        tools:layout="@layout/piso4_fragment_gallery" />

    <fragment
        android:id="@+id/piso5_nav_gallery"
        android:name="com.example.tp_tdl_beltran.ui.gallery.Piso5GalleryFragment"
        android:label="@string/mapa_p5"
        tools:layout="@layout/piso5_fragment_gallery" />

</navigation>