<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_la_reserva_de_aulas"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_la_hora_d_a_y_piso_para_tu_reserva"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003">

        <Button
            android:id="@+id/botonMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mapa" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="175dp"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002">

        <NumberPicker
            android:id="@+id/horasPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <NumberPicker
            android:id="@+id/minutosPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="-225dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <Spinner
            android:id="@+id/SpinnerPiso"
            android:layout_width="142dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="340dp"
            android:baselineAligned="false"
            android:entries="@array/pisos_array" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003"
        app:singleSelection="true">

        <Button
            android:id="@+id/Lunes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:insetLeft="-16dp"
            android:insetRight="0dp"
            app:icon="@drawable/icons8_monday_50"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="120dp" />

        <Button
            android:id="@+id/Martes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:insetLeft="-16dp"
            app:icon="@drawable/icons8_tuesday_50"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="225dp" />

        <Button
            android:id="@+id/Miercoles"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:insetLeft="-16dp"
            app:icon="@drawable/icons8_wednesday_50"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="326dp" />

        <Button
            android:id="@+id/Jueves"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:insetLeft="-16dp"
            app:icon="@drawable/icons8_thursday_50"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="506dp" />

        <Button
            android:id="@+id/Viernes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:insetLeft="-16dp"
            app:icon="@drawable/icons8_friday_50"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="39dp" />

        <Button
            android:id="@+id/Sabado"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="61dp"
            android:insetLeft="-16dp"
            app:icon="@drawable/icons8_saturday_50__1_"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="424dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/scroll_view_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>